# climate-error

./: .gitignore  ATTRIBUTION.md  CITATION.cff  LICENSE  MANIFEST.in  NOTICE  README.md  pyproject.toml  requirements.txt  run_docker.sh  run_docker_wsl.sh  update_version.py
.github/workflows/: ci.yml  release-testpypi.yml  release.yml
climate_error/: __init__.py  quantile_error_metrics.py  utils.py  weibull_methods.py
example_wind_data/: README.md  get_capel_meso_ts.py  get_data_capel.py  get_data_ventosa.py
examples/: README.md  helpers.py  run_experiment_realcase.py  run_experiment_timelags.py  run_experiment_weibullFitError.py  run_periodic_lag_error.py
results/: experiment_realcase_table.txt  experiment_timelags_table.txt  experiment_weibullFitError_table.txt
tests/: test_error_metrics.py  test_utils.py  test_weibull_methods.py
