[project]
name = "climate-error"
dynamic = ["version"]
description = "Quantile Error Metrics for Wind Climates"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE", "NOTICE", "ATTRIBUTION.md"]
authors = [
  { name = "Carlos Veiga Rodrigues", email = "calvr@vestas.com" },
  { name = "Io Odderskov", email = "isgod@vestas.com" }
]
maintainers = [
  { name = "Carlos Veiga Rodrigues", email = "calvr@vestas.com" }
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

requires-python = ">=3.10,<3.14"
dependencies = [
  "requests >=2.31",
  "numpy >=1.20,<2.4.0",
  "scipy >=1.10,<1.17.0",
  "matplotlib >=3.8.0,<4.0.0",
  "pandas >=2.2.0,<3.0.0",
  "xarray >=2025.6.1",
  "netCDF4 >=1.6",
  "h5netcdf >=1.2",
  "h5py >=3.8",
  "cftime >=1.6",
  "tabulate >=0.9.0",
]

[project.urls]
Homepage = "https://github.com/calvr/climate-error"
Repository = "https://github.com/calvr/climate-error"
Documentation = "https://github.com/calvr/climate-error#readme"
Issues = "https://github.com/calvr/climate-error/issues"

[build-system]
requires = ["wheel", "setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"
tag_regex = "^(?:test-)?(?P<version>\\d+\\.\\d+\\.\\d+)$"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["climate_error*"]
exclude = [
    "tests*",
    "examples*",
    "example_wind_data*",
    "results*",
    "debug*",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "ruff", "mypy"]

[tool.coverage.run]
source = ["climate_error"]
relative_files = true
branch = true
omit = [
  "debug/*",
  "docs/*",
  "tests/*",
  "*/tests/*",
  "*/test_*.py",
  "*/__init__.py",  # optional: exclude empty inits
  "setup.py",
]

[tool.coverage.report]
show_missing = true  # Show missing lines in terminal
skip_covered = true
#fail_under = 80  # optional: fail if coverage < 80%
exclude_lines = [
    "pragma: no cover",
    "pragma : no cover",
    # Don't complain if non-runnable code isn't run:
    "if __name__ == .__main__.:",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    #Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
cache-dir = ".ruff_cache"
extend-exclude = [
  "tests/",
  "example_wind_data/",
  "examples/",
  "results/",
  "*/setup.py",
  "docs/",
  "debug/",
]
fix = false
unsafe-fixes = false
show-fixes = false

